--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ body{
 
     /* Style the header */
     .header {
-        background-color: #f44336;
+        background-color: #3659f4;
         padding: 30px 40px;
         color: white;
         text-align: center;
@@ -56,7 +56,7 @@ body{
     /* Style the "Add" button */
     .addBtn {
         padding: 10px;
-        width: 25%;
+        width: 15%;
         background: #d9d9d9;
         color: #555;
         float: left;
@@ -65,6 +65,8 @@ body{
         cursor: pointer;
         transition: 0.3s;
         border-radius: 0;
+        position: absolute;
+        right: 80px;
     }
     
     .addBtn:hover {
@@ -88,18 +90,11 @@ body{
         font-size: 18px;
         transition: 0.2s;
         width: 100%;
-        
-        /* make the list items unselectable */
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
     }
     
     /* Set all odd list items to a different color (zebra-stripes) */
     ul li:nth-child(odd) {
         background: #f9f9f9;
-        width: 100%;
     }
     
     /* Darker background-color on hover */
@@ -113,12 +108,11 @@ body{
         background: #888;
         color: #fff;
         text-decoration: line-through;
-        width: 100%;
     }
     
     /* Add a "checked" mark when clicked on */
     ul li.checked::before {
-        content: '';
+        /*content: '';*/
         position: absolute;
         border-color: #fff;
         border-style: solid;
@@ -141,5 +135,18 @@ body{
     
     .close:hover {
         background-color: #f44336;
+        color: white;
+    }
+
+
+    .done {
+        position: absolute;
+        right: 90px;
+        top: 0;
+        padding: 12px 16px 12px 16px;
+    }
+    
+    .done:hover {
+        background-color: #5236f4;
         color: white;
     }
